# gift_text_parser

./: README.md  pyproject.toml  requirements.txt
app/: main.py
gift_text_parser/: main.py  utils.py
tests/: test_parser.py
